--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,12 @@
     font-family: 'Work Sans', sans-serif;
     font-weight: normal;
 }
-
+#wrapper{
+    width: 100%;
+    height: 100%;
+    min-height: 400px;
+    background-image: url(assets/images/background-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size:cover;
+}
