--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,19 @@
     font-family: 'Work Sans', sans-serif;
     font-weight: normal;
 }
+body,
+html{
+    height: 100%;
+}
 #wrapper{
     width: 100%;
     height: 100%;
-    min-height: 400px;
-    background-image: url(assets/images/background-pattern-desktop.svg);
-    background-repeat: no-repeat;
-    background-position: top center;
     background-size:cover;
+    background-color: hsl(275, 100%, 97%)
+}
+#background-top-img{
+    height: 40vh;
+    width: 100%;
+    background-image: url(assets/images/background-pattern-desktop.svg);
+    background-position: left;
 }
