--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,16 @@ html{
     width: 100%;
     height: 100%;
     background-size:cover;
-    background-color: hsl(275, 100%, 97%)
+    background-color: hsl(275, 100%, 97%);
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: repeat(10,1fr);
 }
 #background-top-img{
-    height: 40vh;
+    /* height: 40vh; */
     width: 100%;
     background-image: url(assets/images/background-pattern-desktop.svg);
-    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-area: 1 / 1 / 5 / -1;
 }
