--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
  @import url('https://fonts.googleapis.com/css2?family=Vina+Sans&family=Work+Sans:wght@400;600;700&display=swap');
 
-* {
+html {
     font-size: 16px;
     font-family: 'Work Sans', sans-serif;
     font-weight: normal;
@@ -36,4 +36,19 @@ html{
 }
 #main_questions{
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+    justify-content: space-around;
+
+}
+.question{
+    display: flex;
+    flex-direction: column;
+}
+.question .always_on_show{
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
